--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+!service/ticketing-api/main/**/build/
+!service/ticketing-api/test/**/build/
 
 ### STS ###
 .apt_generated
@@ -14,8 +14,8 @@ build/
 .springBeans
 .sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+!service/ticketing-api/main/**/bin/
+!service/ticketing-api/test/**/bin/
 
 ### IntelliJ IDEA ###
 .idea
@@ -23,8 +23,8 @@ bin/
 *.iml
 *.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+!service/ticketing-api/main/**/out/
+!service/ticketing-api/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
