--- a/service/coupon-api/src/main/resources/application.yml
+++ b/service/coupon-api/src/main/resources/application.yml
@@ -1,10 +1,15 @@
-server.port: 9000
+server.port: 8080
+
 spring:
   application:
-    name: kuke-board-article-service
+    name: coupon-api
   datasource:
+    hikari:
+      maximum-pool-size: 50
+      minimum-idle: 10
+      connection-timeout: 20000  # ms
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/article
+    url: jdbc:mysql://127.0.0.1:3306/coupon
     username: root
     password: root
   jpa:
@@ -19,3 +24,8 @@ spring:
       port: 6379
   kafka:
     bootstrap-servers: 127.0.0.1:9092
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
