--- a/service/coupon-consumer/src/main/resources/application.yml
+++ b/service/coupon-consumer/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server.port: 9000
 spring:
   application:
-    name: kuke-board-article-service
+    name: coupon-consumer
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/article
+    url: jdbc:mysql://127.0.0.1:3306/coupon
     username: root
     password: root
   jpa:
@@ -17,5 +17,3 @@ spring:
     redis:
       host: 127.0.0.1
       port: 6379
-  kafka:
-    bootstrap-servers: 127.0.0.1:9092
