--- a/service/coupon-core/src/main/resources/application.yml
+++ b/service/coupon-core/src/main/resources/application.yml
@@ -1,7 +1,31 @@
 server.port: 9000
 spring:
+  config:
+    activate:
+      on-profile: test
+  datasource:
+    url: jdbc:h2:mem:test;
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
+---
+spring:
+  config:
+    activate:
+      on-profile: local
   application:
-    name: ticker-domain
+    name: coupon-core
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/coupon
